--- a/style.css
+++ b/style.css
@@ -144,21 +144,12 @@ body {
     grid-template-areas:
       "Daniel Daniel Jonathan Kira"
       "Jeanette Patrick Patrick Kira";
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     padding-left: 80px;
     padding-right: 80px;
   }
+  .item-no {
+    max-width: 100%;
+  }
 }
-
-/**
-Note for text colors:
-
-1. "Verified Graduate" has the same color as the person's name with 50% opacity
-2. Review paragraphs inside the quotations have the same color as well, but are at 70% opacity
-
-### Font
-
-- Family: [Barlow Semi Condensed](https://fonts.google.com/specimen/Barlow+Semi+Condensed)
-- Weights: 500, 600
-
-> 💎 [Upgrade to Pro](https://www.frontendmentor.io/pro?ref=style-guide) for design file access to see all design details and get hands-on experience using a professional workflow with tools like Figma.
-*/
